--- a/themes/zephyr/front-end/src/styles/style.scss
+++ b/themes/zephyr/front-end/src/styles/style.scss
@@ -4,8 +4,10 @@
 @import "mixins";
 @import "general-classes";
 @import "layouts/quform_form";
+@import "pages/home";
 @import "pages/growthGuide";
 @import "pages/say-hello";
+@import "pages/team";
 
 
 /*!
