--- a/themes/zephyr/front-end/src/components/component-contact-us/style.scss
+++ b/themes/zephyr/front-end/src/components/component-contact-us/style.scss
@@ -25,7 +25,7 @@ section.component-contact-us {
                 flex-basis: 50%;
                 margin-bottom: 0;
                 padding: size(50) size(20);
-                border: 1px solid $zephyr-black;
+                border-left: 1px solid $zephyr-black;
             }
             @include min-medium-screen {
                 flex-basis: 45%;
