--- a/themes/zephyr/front-end/src/components/component-hero/index.html
+++ b/themes/zephyr/front-end/src/components/component-hero/index.html
@@ -2,35 +2,60 @@
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
 <div smooth-scroll-container="">
-
-<section class="component-hero">
-  <div class="hero-image">
-    <img src="../../html/images/hero.png" alt="hero">
-  </div>
-  <div class="container">
-    <div class="content">
-      <h6 class="headline-6 word-up center">health & wellness</h6>
-      <h1 class="headline-1 word-up center">Lorem Ipsum dolor sit amut.</h1>
-      <p class="paragraph real-line-up center">With deep industry knowledge and expertise in the emerging health and wellness space,
-        our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new audiences
-        via digital marketing, we have industry expertise to help you throughout your journey. </p>
+  <!--  hero-->
+  <section class="component-hero">
+    <div class="hero-image">
+      <img src="../../html/images/hero.png" alt="hero">
     </div>
-  </div>
-  <div class="down">
-    <svg width="24" height="56" viewBox="0 0 24 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g clip-path="url(#clip0)">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z" fill="white"/>
-        <path class="dot" fill-rule="evenodd" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white"/>
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 53.0002L17.5 47.5002C17.9 47.1002 18.5 47.1002 18.9 47.5002C19.3 47.9002 19.3 48.5002 18.9 48.9002L12.7 55.1002C12.5 55.3002 12.2 55.4002 12 55.4002C11.8 55.4002 11.5 55.3002 11.3 55.1002L4.99995 48.9002C4.59995 48.5002 4.59995 47.9002 4.99995 47.5002C5.39995 47.1002 5.99995 47.1002 6.39995 47.5002L12 53.0002Z" fill="white"/>
-      </g>
-      <defs>
-        <clipPath id="clip0">
-          <rect width="24" height="55.4" fill="white"/>
-        </clipPath>
-      </defs>
+    <div class="container">
+      <div class="content">
+        <h6 class="headline-6 word-up center">health & wellness</h6>
+        <h1 class="headline-1 word-up center">Lorem Ipsum dolor sit amut.</h1>
+        <p class="paragraph real-line-up center">With deep industry knowledge and expertise in the emerging health and wellness space,
+          our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new
+          audiences
+          via digital marketing, we have industry expertise to help you throughout your journey. </p>
+      </div>
+    </div>
+    
+    <svg class="circle orange-circle" width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="45" cy="45" r="45" fill="#FE9572" fill-opacity="0.9"/>
     </svg>
-  </div>
-</section>
+    
+    <svg class="circle aqua-circle" xmlns="http://www.w3.org/2000/svg" width="171" height="171" viewBox="0 0 171 171">
+      <g>
+        <g>
+          <path fill="#8aeed6" fill-opacity=".6" d="M171 85.5c0 47.22-38.28 85.5-85.5 85.5S0 132.72 0 85.5 38.28 0 85.5 0 171 38.28 171 85.5z"/>
+        </g>
+      </g>
+    </svg>
+    
+    <img class="circle dark-circle" src="../../html/images/dark-circle.png" alt="dark-circle">
+    
+    <svg class="circle oval" width="258" height="253" viewBox="0 0 258 253" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M145.725 1.12358C120.277 4.83717 96.5096 16.07 74.3481 29.145C39.811 49.5244 5.57066 78.9824 0.607883 118.844C-1.604 136.61 2.40987 154.74 9.57122 171.142C32.9158 224.614 93.2636 260.098 150.906 251.797C208.547 243.497 257.218 190.344 257.984 131.983C258.878 63.7665 222.083 -10.0199 145.725 1.12358Z"
+            fill="#8aeed6" fill-opacity=".6"/>
+    </svg>
+    <div class="down">
+      <svg width="24" height="56" viewBox="0 0 24 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g clip-path="url(#clip0)">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z"
+                fill="white"/>
+          <path class="dot" fill-rule="evenodd" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white"/>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M12 53.0002L17.5 47.5002C17.9 47.1002 18.5 47.1002 18.9 47.5002C19.3 47.9002 19.3 48.5002 18.9 48.9002L12.7 55.1002C12.5 55.3002 12.2 55.4002 12 55.4002C11.8 55.4002 11.5 55.3002 11.3 55.1002L4.99995 48.9002C4.59995 48.5002 4.59995 47.9002 4.99995 47.5002C5.39995 47.1002 5.99995 47.1002 6.39995 47.5002L12 53.0002Z"
+                fill="white"/>
+        </g>
+        <defs>
+          <clipPath id="clip0">
+            <rect width="24" height="55.4" fill="white"/>
+          </clipPath>
+        </defs>
+      </svg>
+    </div>
+  </section>
 </div>
 <script src="./main.js"></script>
 
