--- a/themes/zephyr/front-end/src/components/component-our-journey/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-journey/index.html
@@ -35,7 +35,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <h3 class="headline-7">Proposition Development</h3>
+              <h3 class="small-headline">Proposition Development</h3>
               <p class="paragraph-1">Vestibulum ut tincidunt augue. Nam rutrum purus nibh, vel rutrum neque fermentum non. Ut ultrices commodo turpis. Mauris convallis ullamcorper.</p>
             </div>
           </div>
@@ -54,7 +54,7 @@
                 <path d="M7.05054 23.4781C15.4011 22.8264 22.022 17.0422 22.022 8.66748" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                 <path d="M18.12 11.8931L22.0137 8.08789L25.9074 11.8931" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
               </svg>
-              <h3 class="headline-7">Go To Market Strategy</h3>
+              <h3 class="small-headline">Go To Market Strategy</h3>
               <p class="paragraph-1">Ut tincidunt gravida tincidunt. Praesent accumsan elementum aliquet. Ut eget lectus quis dui pulvinar fringilla sit amet id metus. Nulla.</p>
             </div>
           </div>
@@ -78,7 +78,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <h3 class="headline-7">Ecommerce Wireframing</h3>
+              <h3 class="small-headline">Ecommerce Wireframing</h3>
               <p class="paragraph-1">Fusce ut ipsum rutrum, dictum dui quis, eleifend libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere. </p>
             </div>
           </div>
@@ -102,7 +102,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <h3 class="headline-7">Ecommerce Visual Designs</h3>
+              <h3 class="small-headline">Ecommerce Visual Designs</h3>
               <p class="paragraph-1">Proin vitae eros tortor. Donec hendrerit magna nunc, eget pulvinar lectus maximus rhoncus. Phasellus ex felis, vestibulum vel hendrerit non.</p>
             </div>
           </div>
@@ -129,7 +129,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <h3 class="headline-7">Ecommerce Development</h3>
+              <h3 class="small-headline">Ecommerce Development</h3>
               <p class="paragraph-1">Morbi efficitur sem nulla, et bibendum quam ultrices at. Aenean non odio in enim ultricies elementum et id erat.</p>
             </div>
           </div>
@@ -141,7 +141,7 @@
                 <path d="M30.6394 14.5551C30.6394 14.3685 30.513 14.1819 30.3235 14.1197L26.0277 12.6891C26.2804 12.0049 26.4067 11.2584 26.4067 10.4498C26.4067 6.71777 23.3112 3.66992 19.5207 3.66992C15.7303 3.66992 12.6348 6.71777 12.6348 10.4498C12.6348 14.1819 15.7935 17.2297 19.5839 17.2297C21.2896 17.2297 22.9321 16.6077 24.1325 15.4881L25.3328 18.9714C25.3959 19.158 25.5855 19.2824 25.775 19.2824C25.9645 19.2824 26.154 19.158 26.2172 18.9714L27.1016 16.4833L29.7549 19.0958C29.8181 19.158 29.9445 19.2202 30.0708 19.2202C30.1972 19.2202 30.3235 19.158 30.3867 19.0958C30.5762 18.9092 30.5762 18.5982 30.3867 18.4115L27.7966 15.9235L30.3235 15.0527C30.513 14.9283 30.6394 14.8039 30.6394 14.5551ZM19.5839 16.2967C16.2989 16.2967 13.6456 13.6843 13.6456 10.4498C13.6456 7.21538 16.2989 4.60294 19.5839 4.60294C22.869 4.60294 25.5223 7.21538 25.5223 10.4498C25.5223 11.134 25.3959 11.756 25.2064 12.3781L23.7534 11.8804C23.5639 11.8182 23.3744 11.8804 23.248 12.0049C23.1217 12.1293 23.0585 12.3159 23.1217 12.5025L23.8166 14.5551C22.6795 15.6747 21.1633 16.2967 19.5839 16.2967ZM26.7858 15.3015C26.7226 15.3015 26.6594 15.3637 26.5962 15.4259C26.5331 15.4881 26.5331 15.5503 26.4699 15.6125L25.775 17.5407L24.2588 13.1867L28.681 14.6795L26.7858 15.3015Z" fill="#252525"/>
                 <path d="M20.4683 8.27276C20.721 8.45936 20.8473 8.70817 20.8473 8.95697H21.7949C21.7949 8.39716 21.5422 7.89956 21.1 7.52635C20.7841 7.27755 20.4051 7.09094 20.0261 7.02874V5.84692H19.0784V7.09094C18.6994 7.15314 18.3204 7.33975 18.0045 7.58855C17.5623 7.96176 17.3096 8.45936 17.3096 9.01917C17.3096 9.57898 17.5623 10.0766 18.0045 10.4498C18.4467 10.823 18.9521 11.0096 19.5207 11.0096C19.8997 11.0096 20.2156 11.134 20.4683 11.3206C20.721 11.5072 20.8473 11.756 20.8473 12.0048C20.8473 12.2536 20.721 12.5024 20.4683 12.689C19.9629 13.1244 19.0784 13.1244 18.6362 12.689C18.3835 12.5024 18.2572 12.2536 18.2572 12.0048H17.3096C17.3096 12.5646 17.5623 13.0622 18.0045 13.4354C18.3204 13.6842 18.6994 13.8708 19.0784 13.9331V15.0527H20.0261V13.9331C20.4051 13.8708 20.7841 13.6842 21.1 13.4354C21.5422 13.0622 21.7949 12.5646 21.7949 12.0048C21.7949 11.445 21.5422 10.9474 21.1 10.5742C20.6578 10.201 20.1524 10.0144 19.5838 10.0144C19.2048 10.0144 18.8889 9.88999 18.6362 9.70338C18.3835 9.51678 18.2572 9.26798 18.2572 9.01917C18.2572 8.77037 18.3835 8.52157 18.6362 8.33496C19.1416 7.89956 20.0261 7.89956 20.4683 8.27276Z" fill="#252525"/>
               </svg>
-              <h3 class="headline-7">SEO</h3>
+              <h3 class="small-headline">SEO</h3>
               <p class="paragraph-1">Morbi at neque sit amet felis bibendum egestas. Pellentesque semper aliquam nisl, a sollicitudin lectus rhoncus quis. Etiam euismod lacus.</p>
             </div>
           </div>
@@ -153,7 +153,7 @@
                 <path d="M30.6394 14.5551C30.6394 14.3685 30.513 14.1819 30.3235 14.1197L26.0277 12.6891C26.2804 12.0049 26.4067 11.2584 26.4067 10.4498C26.4067 6.71777 23.3112 3.66992 19.5207 3.66992C15.7303 3.66992 12.6348 6.71777 12.6348 10.4498C12.6348 14.1819 15.7935 17.2297 19.5839 17.2297C21.2896 17.2297 22.9321 16.6077 24.1325 15.4881L25.3328 18.9714C25.3959 19.158 25.5855 19.2824 25.775 19.2824C25.9645 19.2824 26.154 19.158 26.2172 18.9714L27.1016 16.4833L29.7549 19.0958C29.8181 19.158 29.9445 19.2202 30.0708 19.2202C30.1972 19.2202 30.3235 19.158 30.3867 19.0958C30.5762 18.9092 30.5762 18.5982 30.3867 18.4115L27.7966 15.9235L30.3235 15.0527C30.513 14.9283 30.6394 14.8039 30.6394 14.5551ZM19.5839 16.2967C16.2989 16.2967 13.6456 13.6843 13.6456 10.4498C13.6456 7.21538 16.2989 4.60294 19.5839 4.60294C22.869 4.60294 25.5223 7.21538 25.5223 10.4498C25.5223 11.134 25.3959 11.756 25.2064 12.3781L23.7534 11.8804C23.5639 11.8182 23.3744 11.8804 23.248 12.0049C23.1217 12.1293 23.0585 12.3159 23.1217 12.5025L23.8166 14.5551C22.6795 15.6747 21.1633 16.2967 19.5839 16.2967ZM26.7858 15.3015C26.7226 15.3015 26.6594 15.3637 26.5962 15.4259C26.5331 15.4881 26.5331 15.5503 26.4699 15.6125L25.775 17.5407L24.2588 13.1867L28.681 14.6795L26.7858 15.3015Z" fill="#252525"/>
                 <path d="M20.4683 8.27276C20.721 8.45936 20.8473 8.70817 20.8473 8.95697H21.7949C21.7949 8.39716 21.5422 7.89956 21.1 7.52635C20.7841 7.27755 20.4051 7.09094 20.0261 7.02874V5.84692H19.0784V7.09094C18.6994 7.15314 18.3204 7.33975 18.0045 7.58855C17.5623 7.96176 17.3096 8.45936 17.3096 9.01917C17.3096 9.57898 17.5623 10.0766 18.0045 10.4498C18.4467 10.823 18.9521 11.0096 19.5207 11.0096C19.8997 11.0096 20.2156 11.134 20.4683 11.3206C20.721 11.5072 20.8473 11.756 20.8473 12.0048C20.8473 12.2536 20.721 12.5024 20.4683 12.689C19.9629 13.1244 19.0784 13.1244 18.6362 12.689C18.3835 12.5024 18.2572 12.2536 18.2572 12.0048H17.3096C17.3096 12.5646 17.5623 13.0622 18.0045 13.4354C18.3204 13.6842 18.6994 13.8708 19.0784 13.9331V15.0527H20.0261V13.9331C20.4051 13.8708 20.7841 13.6842 21.1 13.4354C21.5422 13.0622 21.7949 12.5646 21.7949 12.0048C21.7949 11.445 21.5422 10.9474 21.1 10.5742C20.6578 10.201 20.1524 10.0144 19.5838 10.0144C19.2048 10.0144 18.8889 9.88999 18.6362 9.70338C18.3835 9.51678 18.2572 9.26798 18.2572 9.01917C18.2572 8.77037 18.3835 8.52157 18.6362 8.33496C19.1416 7.89956 20.0261 7.89956 20.4683 8.27276Z" fill="#252525"/>
               </svg>
-              <h3 class="headline-7">Google Ads</h3>
+              <h3 class="small-headline">Google Ads</h3>
               <p class="paragraph-1">Curabitur at lorem sed mi accumsan elementum. Pellentesque sed posuere metus. Nunc scelerisque justo nec turpis molestie tempor. Vestibulum sed.</p>
             </div>
           </div>
@@ -169,7 +169,7 @@
                 <path d="M29.4667 5.1001H28.3334V6.23343H29.4667V5.1001Z" fill="#252525"/>
                 <path d="M27.2 5.1001H26.0667V6.23343H27.2V5.1001Z" fill="#252525"/>
               </svg>
-              <h3 class="headline-7">Paid Social</h3>
+              <h3 class="small-headline">Paid Social</h3>
               <p class="paragraph-1">Converting Cold audiences  Finally, with high intent market covered, we finally in 2020 began to convert ‘cold audiences’ who didnt previously know about ebikes in to customers.</p>
             </div>
           </div>
@@ -189,7 +189,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <h3 class="headline-7">Growth Hacking</h3>
+              <h3 class="small-headline">Growth Hacking</h3>
               <p class="paragraph-1">Quisque facilisis magna lectus, ac viverra justo porta ut. Etiam et dui id quam gravida aliquet. Nunc ornare ornare faucibus.</p>
             </div>
           </div>
