--- a/themes/zephyr/front-end/src/components/component-home-swiper/index.html
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/index.html
@@ -4,9 +4,34 @@
 <div smooth-scroll-container="">
   <section class="component-home-swiper">
     <div class="container">
-      <div class="home-swiper">
+      <div class="home-swiper d-flex">
         <div class="left-side">
           <h6 class="headline-6 normal">STEP 1 – DIGITAL STRATEGY</h6>
+          <h5 class="sub-title">We immerse ourselves in our client’s worlds in order to seize opportunities.</h5>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="categories">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.9963 30.9995C24.2826 30.9995 31 24.2822 31 15.9959C31 7.70956 24.2826 0.992188 15.9963 0.992188C7.71005 0.992188 0.992676 7.70956 0.992676 15.9959C0.992676 24.2822 7.71005 30.9995 15.9963 30.9995Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M6.27878 18.9892C7.53172 18.9892 8.54743 17.9735 8.54743 16.7206C8.54743 15.4676 7.53172 14.4519 6.27878 14.4519C5.02584 14.4519 4.01013 15.4676 4.01013 16.7206C4.01013 17.9735 5.02584 18.9892 6.27878 18.9892Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M12.3195 8.36972L16.5913 4.0979" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M12.3195 4.0979L16.5913 8.36972" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M23.4852 18.9884L27.757 14.7166" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M23.4852 14.7166L27.757 18.9884" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M7.05054 10.9443C15.4011 11.596 22.022 17.3802 22.022 25.7549" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M18.1198 22.5286L22.0135 26.3418L25.9072 22.5286" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M7.05054 23.4781C15.4011 22.8264 22.022 17.0422 22.022 8.66748" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                  <path d="M18.12 11.8931L22.0137 8.08789L25.9074 11.8931" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"></path>
+                </svg>
+                <div class="content">
+                  <h3 class="small-headline">Go to Market Strategy</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <img src="./../../html/images/swiper-home-image.png" alt="Swiper home image">
         </div>
       </div>
     </div>
