added --zephyr-milky color to general

--- a/themes/zephyr/front-end/src/components/component-our-journey/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-journey/style.scss
@@ -35,7 +35,7 @@ section.component-our-journey {
                     margin-bottom: size(16);
                 }
                 &.milky{
-                    background: #cce7dc;
+                    background: $zephyr-milky;
                 }
                 &.orange{
                     background: rgba(255, 155, 120, 0.8);;
