--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -9,7 +9,7 @@
     --zephyr-gray: #252525;
     --zephyr-green: #5fe099;
     --zephyr-gray-light: #fefefd;
-    --zephyr-blue: #4381cf;
+    --zephyr-milky: #cce7dc;
     --zephyr-dark-blue: #1b1c30;
     --zephyr-salmon: #f67f6f;
     --zephyr-ruby: #f65257;
