--- a/themes/zephyr/front-end/src/styles/_variables.scss
+++ b/themes/zephyr/front-end/src/styles/_variables.scss
@@ -21,7 +21,7 @@ $zephyr-black: var(--zephyr-black);
 $zephyr-gray: var(--zephyr-gray);
 $zephyr-green: var(--zephyr-green);
 $zephyr-gray-light: var(--zephyr-gray-light);
-$zephyr-blue: var(--zephyr-blue);
+$zephyr-milky: var(--zephyr-milky);
 $zephyr-dark-blue: var(--zephyr-dark-blue);
 $zephyr-salmon: var(--zephyr-salmon);
 $zephyr-ruby: var(--zephyr-ruby);
