--- a/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
@@ -13,7 +13,16 @@ section.component-home-swiper {
                 font-weight: 300;
                 letter-spacing: size(0.5);
             }
+            .row{
+                @include change-gutter(52px);
+            }
             .categories{
+                display: flex;
+                margin-bottom: size(52);
+                svg{
+                    flex-shrink: 0;
+                    margin-right: size(14);
+                }
                 .content{
                     .headline-7{
                         color: var(--zephyr-gray);
