added --zephyr-milky color to general

--- a/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
@@ -6,6 +6,7 @@ section.component-home-swiper {
     
     .home-swiper {
         .left-side {
+            background: $zephyr-milky;
             .sub-title {
                 font-family: $Canela;
                 font-size: size(30);
