--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -9,11 +9,11 @@
     --zephyr-gray: #252525;
     --zephyr-green: #5fe099;
     --zephyr-gray-light: #fefefd;
-    --zephyr-milky: #cce7dc;
+    --zephyr-blue: #4381cf;
     --zephyr-dark-blue: #1b1c30;
     --zephyr-salmon: #f67f6f;
     --zephyr-ruby: #f65257;
-    --zephyr-green-light: #8cf7b7;
+    --zephyr-milky: #cce7dc;
     --zephyr-dark: #097dde;
 }
 
