--- a/themes/zephyr/front-end/src/styles/_variables.scss
+++ b/themes/zephyr/front-end/src/styles/_variables.scss
@@ -21,11 +21,11 @@ $zephyr-black: var(--zephyr-black);
 $zephyr-gray: var(--zephyr-gray);
 $zephyr-green: var(--zephyr-green);
 $zephyr-gray-light: var(--zephyr-gray-light);
-$zephyr-milky: var(--zephyr-milky);
+$zephyr-blue: var(--zephyr-blue);
 $zephyr-dark-blue: var(--zephyr-dark-blue);
 $zephyr-salmon: var(--zephyr-salmon);
 $zephyr-ruby: var(--zephyr-ruby);
-$zephyr-green-light: var(--zephyr-green-light);
+$zephyr-milky: var(--zephyr-milky);
 
 // fonts
 $Sailec: 'Sailec';
