some changes in swiper

--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -14,8 +14,8 @@
           campaigns</p>
       </div>
       <div class="about-us-content swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
+        <div class="swiper-wrapper row flex-xl-wrap flex-nowrap">
+          <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo1.png" alt="about logo1">
@@ -23,7 +23,7 @@
               <p class="paragraph-1">Cras varius velit blandit, pellentesque purus blandit, elementum purus. Duis elementum eros quam, et tristique augue porta quis. Aenean rutrum quam vel augue pretium faucibus.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo2.png" alt="about logo2">
@@ -31,7 +31,7 @@
               <p class="paragraph-1">Mauris aliquet interdum sapien, eu convallis eros lacinia eget. Mauris leo est, vestibulum at lorem sit amet, vehicula posuere felis. Morbi malesuada, ex in ultricies.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo3.png" alt="about logo3">
@@ -39,7 +39,7 @@
               <p class="paragraph-1">Etiam consectetur lorem ut sapien ullamcorper, sed sollicitudin dolor venenatis. Aenean pharetra vel turpis eu tempus. Sed vulputate arcu eu dolor ornare, quis posuere erat.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo4.png" alt="about logo4">
@@ -47,7 +47,7 @@
               <p class="paragraph-1">Pellentesque pharetra ex ac mauris dictum, a consectetur diam feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rhoncus.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo5.png" alt="about logo5">
