--- a/themes/zephyr/front-end/src/components/component-about-us/style.scss
+++ b/themes/zephyr/front-end/src/components/component-about-us/style.scss
@@ -9,7 +9,7 @@ section.component-about-us {
     
     .about-us {
         .about-us-title {
-            margin-bottom: size(125);
+            margin-bottom: size(115);
             @include x-large-screen{
                 margin-bottom: size(115);
             }
@@ -28,44 +28,77 @@ section.component-about-us {
         .about-us-content {
             margin-bottom: size(110);
             @include x-large-screen{
-                margin-bottom: size(185);
+                margin-bottom: size(98);
+            }
+            .row{
+                @include max-large-screen{
+                    margin: 0;
+                    > .col-xl-4{
+                        padding: 0;
+                    }
+                }
+            }
+            .swiper-wrapper{
+                @include x-large-screen{
+                    width: auto;
+                }
             }
             .about-logo {
+                @include x-large-screen{
+                    margin-bottom: size(87);
+                }
                 .image-wrapper {
-                    padding-bottom: size(30);
-                    border-bottom: 1px solid #979797;
-                    margin-bottom: size(17);
+                    margin-bottom: size(11);
                     display: flex;
                     min-height: size(89);
                     align-items: center;
-                    @include x-large-screen{
-                        padding-bottom: size(20);
-                    }
                     img {
                         margin: 0 auto;
                     }
                 }
+                .paragraph-1{
+                    line-break: anywhere;
+                    border-top: 1px solid #979797;
+                    padding-top: size(17);
+                }
             }
-            .swiper-pagination-bullet{
-                position: absolute;
-                bottom: 0;
-                width: size(20);
-                height: size(20);
-                z-index: 99;
-                border: 1px solid $zephyr-black;
-                border-radius: 50%;
-                &.swiper-pagination-bullet-active{
-                    border: 1px solid #88e8b9;
+            .swiper-pagination{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: size(61);
+                @include x-large-screen{
+                    margin-top: 0;
+                }
+                .swiper-pagination-bullet{
+                    position: relative;
+                    width: size(20);
+                    height: size(20);
+                    z-index: 99;
+                    border: 1px solid var(--zephyr-black);
+                    border-radius: 50%;
+                    flex-grow: 0;
+                    flex-shrink: 0;
+                    margin: 0 size(5);
                     &:before{
                         content: '';
                         position: absolute;
                         top: 50%;
                         left: 50%;
-                        transform: translate(-50%,-50%);
-                        width: 50%;
-                        height: 50%;
+                        transform: translate(-50%, -50%);
+                        width: 56%;
+                        height: 56%;
                         background: #6be3a8;
                         border-radius: 50%;
+                        transition: opacity 400ms;
+                        opacity: 0;
+                    }
+    
+                    &.swiper-pagination-bullet-active{
+                        border: 1px solid #88e8b9;
+                        &:before{
+                            opacity: 1;
+                        }
                     }
                 }
             }
