--- a/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
@@ -2,20 +2,28 @@
 @import "src/styles/mixins";
 
 section.component-home-swiper {
-    @include marginY(size(260), size(218));
-    
+    //@include marginY(size(260), size(218));
+    @include marginY(size(50));
+    @include paddingY(size(50));
     .home-swiper {
         .left-side {
             background: $zephyr-milky;
+            @include paddingY(size(77),size(30));
+            @include paddingX(size(50));
+            max-width: 60.8%;
+            .headline-6{
+                margin-bottom: size(16);
+            }
             .sub-title {
                 font-family: $Canela;
                 font-size: size(30);
                 line-height: size(42);
                 font-weight: 300;
                 letter-spacing: size(0.5);
+                margin-bottom: size(58);
             }
             .row{
-                @include change-gutter(52px);
+                @include change-gutter(42px);
             }
             .categories{
                 display: flex;
@@ -32,6 +40,21 @@ section.component-home-swiper {
                         text-transform: none;
                         line-height: 2.5rem;
                     }
+                }
+            }
+        }
+        .right-side{
+            position: relative;
+            width: 100%;
+            .image-wrapper{
+                position: relative;
+                padding-top: 148.23%;
+                height: 0;
+                img{
+                    position: absolute;
+                    top: 0;
+                    object-fit: cover;
+                    height: 100%;
                 }
             }
         }
