--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -66,7 +66,7 @@
           <p class="paragraph-1">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
         </div>
         <div class="row">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-sm-6">
             <div class="image-2 row-image image">
               <div class="image-wrapper">
               <img src="./../../html/images/about-image2.png" alt="about-image-2">
@@ -74,7 +74,7 @@
               <p class="paragraph-1">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. </p>
             </div>
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-sm-6">
             <div class="image-3 row-image image">
               <div class="image-wrapper">
               <img src="./../../html/images/about-image3.png" alt="about-image-3">
