--- a/themes/zephyr/front-end/src/components/component-about-us/style.scss
+++ b/themes/zephyr/front-end/src/components/component-about-us/style.scss
@@ -138,11 +138,14 @@ section.component-about-us {
             .image {
                 .paragraph-1 {
                     @include min-medium-screen {
-                        padding-left: size(12);
+                        @include paddingX(size(12),size(44));
                     }
                 }
             }
             .row{
+                @include min-small-screen{
+                    @include change-gutter(42px);
+                }
                 @include min-medium-screen{
                     @include change-gutter(62px);
                 }
@@ -152,7 +155,6 @@ section.component-about-us {
                 @include min-medium-screen {
                     margin-bottom: 0;
                 }
-                
                 .image-wrapper {
                     margin-bottom: size(22);
                     padding-top: 71.69%;
