--- a/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
@@ -1,6 +1,5 @@
 
-.say-hello-wrapper {
-    
+.sector-expertise2-page-wrapper {
     section.component-hero {
         .content {
             .headline-1 {
@@ -18,8 +17,4 @@
         }
     }
     
-    section.component-contact-us {
-        position: relative;
-        margin-top: size(-243);
-    }
 }
