--- a/themes/zephyr/front-end/src/styles/style.scss
+++ b/themes/zephyr/front-end/src/styles/style.scss
@@ -8,6 +8,8 @@
 @import "pages/growthGuide";
 @import "pages/say-hello";
 @import "pages/team";
+@import "pages/sector-expertise";
+@import "pages/sector-expertise2";
 
 
 /*!
